# First_agent

./: .env.example  .gitignore  Gradio_UI.py  README.md  app.py  prompts.yaml  pyproject.toml  requirements.txt
src/first_agent/: __init__.py  cli.py  ui.py
src/first_agent/_labs/: unit2.py
tools/: __init__.py  disk_free.py  final_answer.py  timezone_time.py  visit_webpage.py  web_search.py
