[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "first-agent"
version = "0.1.0"
description = "First Hugging Face CodeAgent project"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
first-agent = "first_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
